finish api calls

--- a/02_Get_iTunes_Ratings.ipynb
+++ b/02_Get_iTunes_Ratings.ipynb
@@ -584,6 +584,52 @@
     "    mean_rating.append(thisMean)\n",
     "    num_ratings.append(thisTotal)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20384"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mean_rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "podcast_data5 = podcastDf5\n",
+    "podcast_data5 = podcast_data5.assign(itunes_collection_id = itunes_collection_id[:len(mean_rating)],\n",
+    "                    mean_rating = mean_rating,\n",
+    "                    num_ratings = num_ratings)\n",
+    "podcast_data5.to_pickle('pkl/itunes_podcasts_pt5.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
