--- a/03_Parse_RSS_Feeds.ipynb
+++ b/03_Parse_RSS_Feeds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,10 +26,10 @@
     {
      "data": {
       "text/plain": [
-       "(30575, 16)"
+       "(50959, 16)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,10 +52,10 @@
     {
      "data": {
       "text/plain": [
-       "(29487, 16)"
+       "(49813, 16)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,9 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -103,49 +103,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ContentDecodingError",
+     "evalue": "('Received response with content-encoding: gzip, but failed to decode it.', error('Error -3 while decompressing: invalid block type',))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mContentDecodingError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-bb44feec95b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# if valid url, get the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mfeed_url_valid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'feed_url'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvert_unicode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/api.pyc\u001b[0m in \u001b[0;36mget\u001b[0;34m(url, params, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetdefault\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'allow_redirects'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'get'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/api.pyc\u001b[0m in \u001b[0;36mrequest\u001b[0;34m(method, url, **kwargs)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msessions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0;31m# By explicitly closing the session, we avoid leaving sockets open which\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;31m# can trigger a ResourceWarning in some cases, and look like a memory leak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/sessions.pyc\u001b[0m in \u001b[0;36mrequest\u001b[0;34m(self, method, url, params, data, headers, cookies, files, auth, timeout, allow_redirects, proxies, hooks, stream, verify, cert, json)\u001b[0m\n\u001b[1;32m    466\u001b[0m         }\n\u001b[1;32m    467\u001b[0m         \u001b[0msend_kwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 468\u001b[0;31m         \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0msend_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    469\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/sessions.pyc\u001b[0m in \u001b[0;36msend\u001b[0;34m(self, request, **kwargs)\u001b[0m\n\u001b[1;32m    606\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 608\u001b[0;31m             \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/models.pyc\u001b[0m in \u001b[0;36mcontent\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    732\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_content\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_content\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miter_content\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCONTENT_CHUNK_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mbytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/requests/models.pyc\u001b[0m in \u001b[0;36mgenerate\u001b[0;34m()\u001b[0m\n\u001b[1;32m    660\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mChunkedEncodingError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    661\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mDecodeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 662\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mContentDecodingError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    663\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mReadTimeoutError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    664\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mConnectionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mContentDecodingError\u001b[0m: ('Received response with content-encoding: gzip, but failed to decode it.', error('Error -3 while decompressing: invalid block type',))"
+     ]
+    }
+   ],
    "source": [
     "feed_url_valid = []\n",
     "itunes_keywords = []\n",
     "itunes_categories = []\n",
+    "itunes_description = []\n",
+    "itunes_subtitles = []\n",
+    "itunes_summaries = []\n",
     "\n",
-    "for ind, row in podcastTest.iterrows():\n",
+    "for ind, row in podcastDf.iterrows():\n",
     "    try:\n",
     "        urllib2.urlopen(row['feed_url'])\n",
-    "    except urllib2.HTTPError, e:\n",
+    "    except:\n",
     "        feed_url_valid.append(False)\n",
     "        itunes_keywords.append(False)\n",
     "        itunes_categories.append(False)\n",
-    "    except urllib2.URLError, e:\n",
-    "        feed_url_valid.append(False)\n",
-    "        itunes_keywords.append(False)\n",
-    "        itunes_categories.append(False)\n",
+    "        itunes_description.append(False)\n",
+    "        itunes_subtitles.append(False)\n",
+    "        itunes_summaries.append(False)\n",
+    "    else:\n",
     "    \n",
-    "    # if valid url, get the data \n",
-    "    feed_url_valid.append(True)\n",
-    "    r = requests.get(row['feed_url'])\n",
-    "    data = r.text\n",
-    "    data = convert_unicode(data)\n",
-    "    \n",
-    "    # extract keywords \n",
-    "    keywords = re.findall(r'<itunes:keywords>([\\w, ]+)</itunes:keywords>', data)\n",
-    "    keywords = [kwlist.split(',') for kwlist in keywords]\n",
-    "    keywords = clean_results(keywords)\n",
-    "    itunes_keywords.append(keywords)\n",
-    "    \n",
-    "    ### extract categories ###\n",
-    "    categories = re.findall(r'<itunes:category text=\"([\\w \"&amp;\"]+)\"[ />]', data)\n",
-    "    categories = clean_results(categories)\n",
-    "    itunes_categories.append(categories)"
+    "        # if valid url, get the data \n",
+    "        feed_url_valid.append(True)\n",
+    "        r = requests.get(row['feed_url'])\n",
+    "        data = r.text\n",
+    "        data = convert_unicode(data)\n",
+    "        \n",
+    "        # extract keywords \n",
+    "        keywords = re.findall(r'<itunes:keywords>([\\w, ]+)</itunes:keywords>', data)\n",
+    "        keywords = [kwlist.split(',') for kwlist in keywords]\n",
+    "        keywords = clean_results(keywords)\n",
+    "        itunes_keywords.append(keywords)\n",
+    "\n",
+    "        # extract categories\n",
+    "        categories = re.findall(r'<itunes:category text=\"([\\w \"&amp;\"]+)\"[ />]', data)\n",
+    "        categories = clean_results(categories)\n",
+    "        itunes_categories.append(categories)\n",
+    "\n",
+    "        # extract description\n",
+    "        description = re.findall(r'<description>(<!\\[CDATA\\[)*(.*?)(\\]\\]>)*</description>', data)\n",
+    "        description = [d[1] for d in description]\n",
+    "        itunes_description.append(description)\n",
+    "\n",
+    "        # extract episode subtitles\n",
+    "        subtitles = re.findall(r'<itunes:subtitle>(<!\\[CDATA\\[)*(.*?)(\\]\\]>)*</itunes:subtitle', data)\n",
+    "        subtitles = [s[1] for s in subtitles]\n",
+    "        itunes_subtitles.append(subtitles)\n",
+    "\n",
+    "        # extract episode summaries\n",
+    "        summaries = re.findall('<itunes:summary>(\\r\\n\\s*)*(<!\\[CDATA\\[)*(.*?)(\\]\\]>)*(\\r\\n\\s*)*</itunes:summary', data)\n",
+    "        summaries = [s[2] for s in summaries]\n",
+    "        summaries_clean = []\n",
+    "        for s in summaries:\n",
+    "            if re.search(r'brought to you by', s):\n",
+    "                newS = re.findall(r'(.*) brought to you by.*', s)\n",
+    "                summaries_clean.append(newS)\n",
+    "            elif re.search(r'sponsored by', s):\n",
+    "                newS = re.findall(r'(.*) sponsored by.*', s)\n",
+    "                summaries_clean.append(newS)\n",
+    "            else:\n",
+    "                summaries_clean.append(s)\n",
+    "        itunes_summaries.append(summaries_clean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -153,56 +199,32 @@
     {
      "data": {
       "text/plain": [
-       "[['Food', 'Games &amp; Hobbies', 'Arts', 'Comedy', 'Hobbies'],\n",
-       " ['Gadgets', 'Games &amp; Hobbies', 'Video Games', 'Technology'],\n",
-       " ['Religion &amp; Spirituality', 'Christianity'],\n",
-       " ['Places &amp; Travel', 'Society &amp; Culture'],\n",
-       " ['TV &amp; Film'],\n",
-       " ['Comedy'],\n",
-       " [],\n",
-       " ['Arts', 'Literature'],\n",
-       " ['Music'],\n",
-       " False,\n",
-       " [],\n",
-       " ['Arts', 'Literature'],\n",
-       " ['Arts', 'Literature'],\n",
-       " ['Arts', 'Literature'],\n",
-       " ['TV &amp; Film', 'Places &amp; Travel'],\n",
-       " False,\n",
-       " [],\n",
-       " ['Music'],\n",
-       " False,\n",
-       " [],\n",
-       " [],\n",
-       " ['Music'],\n",
-       " ['Technology']]"
+       "3117"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "itunes_categories"
+    "len(feed_url_valid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "url = podcastTest.iloc[3]['feed_url']\n",
-    "#url = 'http://feeds.feedburner.com/SlatePoliticalGabfest'\n",
-    "#url = 'http://feeds.kcrw.com/kcrw/lr?format=xml'\n",
-    "#url = 'http://savagelove.savagelovecast.libsynpro.com/rss'\n",
-    "\n",
-    "r = requests.get(url)\n",
-    "data = r.text\n",
-    "data = convert_unicode(data)"
+    "podcastDf = podcastDf.assign(feed_url_valid = feed_url_valid,\n",
+    "                                 itunes_keywords = itunes_keywords,\n",
+    "                                 itunes_categories = itunes_categories,\n",
+    "                                 itunes_description = itunes_description,\n",
+    "                                 itunes_subtitles = itunes_subtitles,\n",
+    "                                 itunes_summaries = itunes_summaries)"
    ]
   }
  ],
