function to check urls

--- a/curl_test.ipynb
+++ b/curl_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -10,18 +10,21 @@
    "source": [
     "import pycurl, json, sys\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from common_func import check_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "url = 'https://itunes.apple.com/WebObjects/DZR.woa/wa/viewPodcast?cc=us&id=158004641'"
+    "\n",
+    "url = 'https://itunes.apple.com/WebObjects/DZR.woa/wa/viewPodcast?cc=us&id=158004641'\n",
+    "check_url(url, 1, 1)"
    ]
   },
   {
