--- a/common_func.ipynb
+++ b/common_func.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,6 +30,7 @@
     "def check_url(url, num_tries, wait_secs):\n",
     "    \"\"\"Check whether a url is valid. Allows multiple checks with waiting in between.\"\"\"\n",
     "    import time\n",
+    "    import urllib2\n",
     "    for x in range(0, num_tries):  \n",
     "        try:\n",
     "            urllib2.urlopen(url)\n",
@@ -43,6 +44,15 @@
     "            break\n",
     "    return str_error"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
