API calls completed

--- a/02_v3_iTunes_Search_API.ipynb
+++ b/02_v3_iTunes_Search_API.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -465,9 +465,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "  0%|          | 38/19605 [00:30<5:19:56,  1.02it/s]"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -495,6 +493,40 @@
     "        thisResult = pd.io.json.json_normalize(data['results'])\n",
     "        thisResult['id'] = ind\n",
     "        searchResults = pd.concat([searchResults, thisResult], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49930, 36)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "searchResults.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# pickle the current results\n",
+    "searchResults.to_pickle('pkl/itunes_podcasts_v3_COMPLETE.pkl')"
    ]
   },
   {
