--- a/03_iTunes_Scrape.ipynb
+++ b/03_iTunes_Scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
        "(49930, 36)"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
        "(33227, 36)"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -78,10 +78,10 @@
     {
      "data": {
       "text/plain": [
-       "(6273, 36)"
+       "(6217, 36)"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -356,11 +356,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 479,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 22%|██▏       | 1124/5126 [1:12:16<3:08:46,  2.83s/it]//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ud83d' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\udcf1' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\udc4d' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ude02' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ude96' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      "//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\udcbe' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      " 25%|██▍       | 1261/5126 [1:29:46<2:30:56,  2.34s/it]//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ude44' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      " 28%|██▊       | 1416/5126 [1:36:35<3:00:42,  2.92s/it]//anaconda/lib/python2.7/site-packages/unidecode/__init__.py:50: RuntimeWarning: Surrogate character u'\\ude09' will be ignored. You might be using a narrow Python build.\n",
+      "  return _unidecode(string)\n",
+      " 29%|██▊       | 1466/5126 [1:38:47<3:01:09,  2.97s/it]"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-479-9095ec6464f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# redirect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mnewUrl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'https'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mnewUrl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnewUrl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mnewUrl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'&amp;'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mr'&'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewUrl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "for ind, row in tqdm.tqdm(subDf.iterrows(), total=subDf.shape[0]):\n",
     "    collectionId = row['collectionId']\n",
@@ -435,6 +470,242 @@
     "                                      'alsoSubscribed' : [alsoSubscribed]})\n",
     "    scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 481,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# pickle the current results\n",
+    "scrapeResults['episodeDescriptions'] = [unicode(x) for x in scrapeResults['episodeDescriptions']]\n",
+    "scrapeResults['episodeNames'] = [unicode(x) for x in scrapeResults['episodeNames']]\n",
+    "scrapeResults['podcastSummary'] = [unicode(x) for x in scrapeResults['podcastSummary']]\n",
+    "scrapeResults.to_pickle('pkl/scraped_podcasts_pt2.pkl')\n",
+    "\n",
+    "# remove already-retrieved values from podcastDf\n",
+    "doneIds = scrapeResults['collectionId']\n",
+    "\n",
+    "subDf = podcastDf[~podcastDf.collectionId.isin(doneIds)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 23%|██▎       | 832/3658 [1:01:17<2:41:33,  3.43s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, row in tqdm.tqdm(subDf.iterrows(), total=subDf.shape[0]):\n",
+    "    collectionId = row['collectionId']\n",
+    "    scrapeUrl = baseUrl + str(collectionId)\n",
+    "    \n",
+    "    # get podcast summary\n",
+    "    t = run_curl(scrapeUrl)\n",
+    "    soup = BeautifulSoup(t.contents)\n",
+    "    p = soup.p\n",
+    "    if p:\n",
+    "        podcastSummary = soup.p.string\n",
+    "    else: # redirect\n",
+    "        newUrl = soup.findAll(text=re.compile(r'https'))\n",
+    "        try:\n",
+    "            newUrl = newUrl[0]\n",
+    "            newUrl = re.sub(r'&amp;', r'&', newUrl)\n",
+    "\n",
+    "            t = run_curl(newUrl)\n",
+    "            soup = BeautifulSoup(t.contents)\n",
+    "            p = soup.p\n",
+    "            if p:\n",
+    "                podcastSummary = soup.p.string\n",
+    "            else:\n",
+    "                podcastSummary = np.nan\n",
+    "                episodeNames = np.nan\n",
+    "                episodeDescriptions = np.nan\n",
+    "                alsoSubscribed = np.nan\n",
+    "                thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                          'podcastSummary' : [podcastSummary],\n",
+    "                                          'episodeNames' : [episodeNames],\n",
+    "                                          'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                          'alsoSubscribed' : [alsoSubscribed]})\n",
+    "                scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)\n",
+    "                continue\n",
+    "        except:\n",
+    "            podcastSummary = np.nan\n",
+    "            episodeNames = np.nan\n",
+    "            episodeDescriptions = np.nan\n",
+    "            alsoSubscribed = np.nan\n",
+    "            thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                      'podcastSummary' : [podcastSummary],\n",
+    "                                      'episodeNames' : [episodeNames],\n",
+    "                                      'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                      'alsoSubscribed' : [alsoSubscribed]})\n",
+    "            scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)\n",
+    "            continue\n",
+    "    \n",
+    "    # get episode names\n",
+    "    episodeData = soup.findAll('button', kind='episode')\n",
+    "    try:\n",
+    "        episodeNames = [unidecode.unidecode(e['item-name']) for e in episodeData]\n",
+    "    except: # no name\n",
+    "        episodeNames = np.nan\n",
+    "    \n",
+    "    # get episode descriptions\n",
+    "    try:\n",
+    "        episodeDescriptions = [clean_description(e['description']) for e in episodeData]\n",
+    "    except: # no description\n",
+    "        episodeDescriptions = np.nan\n",
+    "    \n",
+    "    # get also subscribed podcasts\n",
+    "    alsoSubscribed = re.findall(r'adam-id=\"(\\d+)\" aria-label=', t.contents)\n",
+    "    try:\n",
+    "        alsoSubscribed = [int(x) for x in alsoSubscribed]\n",
+    "    except:\n",
+    "        alsoSubscribed = np.nan\n",
+    "        \n",
+    "    # append results\n",
+    "    thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                      'podcastSummary' : [podcastSummary],\n",
+    "                                      'episodeNames' : [episodeNames],\n",
+    "                                      'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                      'alsoSubscribed' : [alsoSubscribed]})\n",
+    "    scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scrapeResults = pd.read_pickle('pkl/scraped_podcasts_pt2.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# remove already-retrieved values from podcastDf\n",
+    "doneIds = scrapeResults['collectionId']\n",
+    "\n",
+    "subDf = podcastDf[~podcastDf.collectionId.isin(doneIds)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 30/3632 [01:43<4:20:33,  4.34s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, row in tqdm.tqdm(subDf.iterrows(), total=subDf.shape[0]):\n",
+    "    collectionId = row['collectionId']\n",
+    "    scrapeUrl = baseUrl + str(collectionId)\n",
+    "    \n",
+    "    # get podcast summary\n",
+    "    t = run_curl(scrapeUrl)\n",
+    "    soup = BeautifulSoup(t.contents)\n",
+    "    p = soup.p\n",
+    "    if p:\n",
+    "        podcastSummary = soup.p.string\n",
+    "    else: # redirect\n",
+    "        newUrl = soup.findAll(text=re.compile(r'https'))\n",
+    "        try:\n",
+    "            newUrl = newUrl[0]\n",
+    "            newUrl = re.sub(r'&amp;', r'&', newUrl)\n",
+    "\n",
+    "            t = run_curl(newUrl)\n",
+    "            soup = BeautifulSoup(t.contents)\n",
+    "            p = soup.p\n",
+    "            if p:\n",
+    "                podcastSummary = soup.p.string\n",
+    "            else:\n",
+    "                podcastSummary = np.nan\n",
+    "                episodeNames = np.nan\n",
+    "                episodeDescriptions = np.nan\n",
+    "                alsoSubscribed = np.nan\n",
+    "                thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                          'podcastSummary' : [podcastSummary],\n",
+    "                                          'episodeNames' : [episodeNames],\n",
+    "                                          'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                          'alsoSubscribed' : [alsoSubscribed]})\n",
+    "                scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)\n",
+    "                continue\n",
+    "        except:\n",
+    "            podcastSummary = np.nan\n",
+    "            episodeNames = np.nan\n",
+    "            episodeDescriptions = np.nan\n",
+    "            alsoSubscribed = np.nan\n",
+    "            thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                      'podcastSummary' : [podcastSummary],\n",
+    "                                      'episodeNames' : [episodeNames],\n",
+    "                                      'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                      'alsoSubscribed' : [alsoSubscribed]})\n",
+    "            scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)\n",
+    "            continue\n",
+    "    \n",
+    "    # get episode names\n",
+    "    episodeData = soup.findAll('button', kind='episode')\n",
+    "    try:\n",
+    "        episodeNames = [unidecode.unidecode(e['item-name']) for e in episodeData]\n",
+    "    except: # no name\n",
+    "        episodeNames = np.nan\n",
+    "    \n",
+    "    # get episode descriptions\n",
+    "    try:\n",
+    "        episodeDescriptions = [clean_description(e['description']) for e in episodeData]\n",
+    "    except: # no description\n",
+    "        episodeDescriptions = np.nan\n",
+    "    \n",
+    "    # get also subscribed podcasts\n",
+    "    alsoSubscribed = re.findall(r'adam-id=\"(\\d+)\" aria-label=', t.contents)\n",
+    "    try:\n",
+    "        alsoSubscribed = [int(x) for x in alsoSubscribed]\n",
+    "    except:\n",
+    "        alsoSubscribed = np.nan\n",
+    "        \n",
+    "    # append results\n",
+    "    thisResult = pd.DataFrame({'collectionId' : int(collectionId),\n",
+    "                                      'podcastSummary' : [podcastSummary],\n",
+    "                                      'episodeNames' : [episodeNames],\n",
+    "                                      'episodeDescriptions' : [episodeDescriptions],\n",
+    "                                      'alsoSubscribed' : [alsoSubscribed]})\n",
+    "    scrapeResults = pd.concat([scrapeResults, thisResult], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
