--- a/archive/04_Make_SQL_Database.ipynb
+++ b/archive/04_Make_SQL_Database.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -119,6 +119,48 @@
    "source": [
     "# join dfs\n",
     "podcastDf = pd.merge(scrapeDf, apiDf, how='inner', on='collection_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([         u'also_subscribed',            u'collection_id',\n",
+       "           u'episode_descriptions',            u'episode_names',\n",
+       "                u'podcast_summary',                u'artist_id',\n",
+       "                    u'artist_name',          u'artist_view_url',\n",
+       "                 u'artwork_url100',            u'artwork_url30',\n",
+       "                  u'artwork_url60',           u'artwork_url600',\n",
+       "       u'collection_censored_name',  u'collection_explicitness',\n",
+       "            u'collection_hd_price',          u'collection_name',\n",
+       "               u'collection_price',      u'collection_view_url',\n",
+       "        u'content_advisory_rating',                  u'country',\n",
+       "                       u'currency',                 u'feed_url',\n",
+       "                      u'genre_ids',                   u'genres',\n",
+       "                             u'id',                     u'kind',\n",
+       "             u'primary_genre_name',        u'radio_station_url',\n",
+       "                   u'release_date',      u'track_censored_name',\n",
+       "                    u'track_count',       u'track_explicitness',\n",
+       "                 u'track_hd_price',    u'track_hd_rental_price',\n",
+       "                       u'track_id',               u'track_name',\n",
+       "                    u'track_price',       u'track_rental_price',\n",
+       "                 u'track_view_url',             u'wrapper_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "podcastDf.columns"
    ]
   },
   {
