input podcast_has_genre data

--- a/05_Put_Data_In_Database.ipynb
+++ b/05_Put_Data_In_Database.ipynb
@@ -237,408 +237,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>genre_id</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>137</td>\n",
-       "      <td>Arts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>138</td>\n",
-       "      <td>Philosophy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>139</td>\n",
-       "      <td>Tech News</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>140</td>\n",
-       "      <td>Personal Journals</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>141</td>\n",
-       "      <td>Podcasting</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>142</td>\n",
-       "      <td>Games &amp; Hobbies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>143</td>\n",
-       "      <td>Science &amp; Medicine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>144</td>\n",
-       "      <td>Performing Arts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>145</td>\n",
-       "      <td>Sports &amp; Recreation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>146</td>\n",
-       "      <td>TV &amp; Film</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>147</td>\n",
-       "      <td>Judaism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>148</td>\n",
-       "      <td>Spirituality</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>149</td>\n",
-       "      <td>Kids &amp; Family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>150</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>151</td>\n",
-       "      <td>Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>152</td>\n",
-       "      <td>Educational Technology</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>153</td>\n",
-       "      <td>Medicine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>154</td>\n",
-       "      <td>Management &amp; Marketing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>155</td>\n",
-       "      <td>Hinduism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>156</td>\n",
-       "      <td>Religion &amp; Spirituality</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>157</td>\n",
-       "      <td>Local</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>158</td>\n",
-       "      <td>Social Sciences</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>159</td>\n",
-       "      <td>Careers</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>160</td>\n",
-       "      <td>Fitness &amp; Nutrition</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>161</td>\n",
-       "      <td>Literature</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>162</td>\n",
-       "      <td>Shopping</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>163</td>\n",
-       "      <td>Business</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>164</td>\n",
-       "      <td>Food</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>165</td>\n",
-       "      <td>Automotive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>166</td>\n",
-       "      <td>Video Games</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>175</td>\n",
-       "      <td>Higher Education</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>176</td>\n",
-       "      <td>Natural Sciences</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>177</td>\n",
-       "      <td>Government &amp; Organizations</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>178</td>\n",
-       "      <td>Business News</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>179</td>\n",
-       "      <td>K-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>180</td>\n",
-       "      <td>Alternative Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>181</td>\n",
-       "      <td>News &amp; Politics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>182</td>\n",
-       "      <td>Places &amp; Travel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>183</td>\n",
-       "      <td>Sexuality</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>184</td>\n",
-       "      <td>Other Games</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>185</td>\n",
-       "      <td>Self-Help</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>186</td>\n",
-       "      <td>Amateur</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>187</td>\n",
-       "      <td>Professional</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>188</td>\n",
-       "      <td>Christianity</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>189</td>\n",
-       "      <td>History</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>190</td>\n",
-       "      <td>Comedy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>191</td>\n",
-       "      <td>Visual Arts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>192</td>\n",
-       "      <td>Fashion &amp; Beauty</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>193</td>\n",
-       "      <td>Outdoor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>194</td>\n",
-       "      <td>Society &amp; Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>195</td>\n",
-       "      <td>National</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>196</td>\n",
-       "      <td>Buddhism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>197</td>\n",
-       "      <td>Gadgets</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>198</td>\n",
-       "      <td>Design</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>199</td>\n",
-       "      <td>Podcasts</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>200</td>\n",
-       "      <td>Hobbies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>201</td>\n",
-       "      <td>Music</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>202</td>\n",
-       "      <td>Education</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>203</td>\n",
-       "      <td>Technology</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>204</td>\n",
-       "      <td>Islam</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>68 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    genre_id                        name\n",
-       "0        137                        Arts\n",
-       "1        138                  Philosophy\n",
-       "2        139                   Tech News\n",
-       "3        140           Personal Journals\n",
-       "4        141                  Podcasting\n",
-       "5        142             Games & Hobbies\n",
-       "6        143          Science & Medicine\n",
-       "7        144             Performing Arts\n",
-       "8        145         Sports & Recreation\n",
-       "9        146                   TV & Film\n",
-       "10       147                     Judaism\n",
-       "11       148                Spirituality\n",
-       "12       149               Kids & Family\n",
-       "13       150                       Other\n",
-       "14       151                      Health\n",
-       "15       152      Educational Technology\n",
-       "16       153                    Medicine\n",
-       "17       154      Management & Marketing\n",
-       "18       155                    Hinduism\n",
-       "19       156     Religion & Spirituality\n",
-       "20       157                       Local\n",
-       "21       158             Social Sciences\n",
-       "22       159                     Careers\n",
-       "23       160         Fitness & Nutrition\n",
-       "24       161                  Literature\n",
-       "25       162                    Shopping\n",
-       "26       163                    Business\n",
-       "27       164                        Food\n",
-       "28       165                  Automotive\n",
-       "29       166                 Video Games\n",
-       "..       ...                         ...\n",
-       "38       175            Higher Education\n",
-       "39       176            Natural Sciences\n",
-       "40       177  Government & Organizations\n",
-       "41       178               Business News\n",
-       "42       179                        K-12\n",
-       "43       180          Alternative Health\n",
-       "44       181             News & Politics\n",
-       "45       182             Places & Travel\n",
-       "46       183                   Sexuality\n",
-       "47       184                 Other Games\n",
-       "48       185                   Self-Help\n",
-       "49       186                     Amateur\n",
-       "50       187                Professional\n",
-       "51       188                Christianity\n",
-       "52       189                     History\n",
-       "53       190                      Comedy\n",
-       "54       191                 Visual Arts\n",
-       "55       192            Fashion & Beauty\n",
-       "56       193                     Outdoor\n",
-       "57       194           Society & Culture\n",
-       "58       195                    National\n",
-       "59       196                    Buddhism\n",
-       "60       197                     Gadgets\n",
-       "61       198                      Design\n",
-       "62       199                    Podcasts\n",
-       "63       200                     Hobbies\n",
-       "64       201                       Music\n",
-       "65       202                   Education\n",
-       "66       203                  Technology\n",
-       "67       204                       Islam\n",
-       "\n",
-       "[68 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "genreDf"
+    "podcast_artist = pd.merge(podcastDf, artistDf, how = 'inner', on = 'artist_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# insert artist id into podcast table\n",
+    "query = \"UPDATE podcast SET artist_id=(%s) WHERE id = (%s);\"\n",
+    "for ind, row in podcast_artist.iterrows():\n",
+    "    data = (row['artist_id'], row['podcast_id'])\n",
+    "    cursor.execute(query, data)\n",
+    "    con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test = podcastDf[['podcast_id', 'genres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "podcast_genre = pd.DataFrame(columns=['podcast_id', 'genre_name'])\n",
+    "for ind, row in test.iterrows():\n",
+    "    for genre in row['genres']:\n",
+    "        \n",
+    "        podcast_genre = podcast_genre.append(pd.DataFrame({'podcast_id' : [row['podcast_id']],\n",
+    "                                            'genre_name' : [genre]}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "podcast_genre = pd.merge(podcast_genre, genreDf, how = 'inner', left_on='genre_name', right_on='name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# insert podcast-genre mappings into podcast_has_genre table\n",
+    "query = \"INSERT INTO podcast_has_genre (podcast_id, genre_id) VALUES (%s, %s);\"\n",
+    "for ind, row in podcast_genre.iterrows():\n",
+    "    data = (row['podcast_id'], row['genre_id'])\n",
+    "    cursor.execute(query, data)\n",
+    "con.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmp_also_subscribed = podcastDf[['podcast_id', 'also_subscribed']]\n",
+    "also_subscribed = pd.DataFrame(columns = ['podcast_id', 'also_subscribed'])\n",
+    "for ind, row in tmp_also_subscribed.iterrows():\n",
+    "    for sub in row['also_subscribed']:\n",
+    "        also_subscribed = also_subscribed.append(pd.DataFrame({'podcast_id' : [row['podcast_id']],\n",
+    "                                                              'also_subscribed' : [sub]}))"
    ]
   },
   {
